[package]
name = "rs_quickcheck_util"
rust-version = "1.56"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "some helper functions and macros to ease usage of quickcheck"
repository = "https://github.com/TimeExceed/rs_quickcheck_util"
readme = "README.md"
categories = ["development-tools::testing"]

[dependencies]
quickcheck = "1"

[dev-dependencies]
quickcheck_macros = "1"
